<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="209dp"
            android:layout_marginRight="209dp"
            android:gravity="center"
            android:text="Edu."
            android:textSize="40dp" />

        <ImageView
            android:layout_width="71dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="142dp"
            android:layout_marginRight="142dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_share_black_24dp" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="25dp"
        android:text="Email"
        android:textSize="30dp"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/submit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:text="Password"
        android:textSize="30dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/submit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/submit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:text="@string/not_registered"/>


        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="10dp"
            android:textColor="#04ea00"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>