<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars[0]" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="full name"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="full email"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="type"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_chat_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_chat"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_favorite_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view__favourites"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linear_scale_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_downward_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_download"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_bookmark_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_bookmark"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linear_scale_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_edit_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_lock_outline_black_24dp"/>

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log out"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>



</LinearLayout>